# Homepage

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.dev.yml
frontend/: README.md  bun.lockb  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  theme.ts
frontend/src/scripts/: data.ts  definitions.ts  utils.ts
frontend/src/stores/: user.ts
frontend/src/views/: Login.vue  MyProfile.vue  Users.vue
frontend/src/views/components/: ColorSwitcher.vue  ProfilePicture.vue  UsersTable.vue
src/: auth.rs  definitions.rs  main.rs
src/api/: post.rs  users.rs
src/storage/: database_manager.rs  s3_storage_manager.rs  storage_manager.rs
